modified:   churn-prediction/notebooks/EDA.ipynb

--- a/churn-prediction/notebooks/EDA.ipynb
+++ b/churn-prediction/notebooks/EDA.ipynb
@@ -7,7 +7,8 @@
    "source": [
     "# Exploratory Data Analysis (EDA) \n",
     "\n",
-    "It involves examining and visualizing the data to gain insights, discover patterns, and identify potential relationships between variables.The importance of EDA lies in its ability to provide a deeper understanding of the dataset, uncover hidden patterns, and guide subsequent steps in the analysis process. \n",
+    "It involves examining and visualizing the data to gain insights, discover patterns, and identify potential relationships between variables.\n",
+    "The importance of EDA lies in its ability to provide a deeper understanding of the dataset, uncover hidden patterns, and guide subsequent steps in the analysis process. \n",
     "\n",
     "This EDA will follow:\n",
     "\n",
@@ -244,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +469,7 @@
        "max      199992.480000      1.000000  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +484,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> From this results we can check that there are <span style=\"background-color:lightgray\">no missing values</span> and identify the <span style=\"background-color:lightgray\">type</span> of each feature."
+    "> From this results we can check that there are <span style=\"background-color:#e675a7\">no missing values</span> and identify the <span style=\"background-color:#e675a7\">type</span> of each feature."
    ]
   },
   {
@@ -497,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +531,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> From this chart we can verify that the data is <span style=\"background-color:lightgray\">not balanced</span>. This imbalance should be considered for the entire EDA. *Special attention for charts with absolute value* and counts.\n",
+    "> From this chart we can verify that the data is <span style=\"background-color:#e675a7\">not balanced</span>. This imbalance should be considered for the entire EDA. *Special attention for charts with absolute value* and counts.\n",
     "\n",
     "<span style='color:white; background-color:#35193e'>Consideration for feature engineering:</span>\n",
     "- It's important to handle class imbalance appropriately to avoid biased model performance and ensure fair and accurate predictions for both classes.\n",
@@ -554,12 +555,12 @@
     "\n",
     "### 3.1 Correlation Analysis\n",
     "\n",
-    "> The importance of correlation analysis in binary classification problems lies in understanding the relationship between predictor variables and the target variable. It helps identify which features are most influential in predicting the target class, allowing for feature selection or engineering. Additionally, correlation analysis helps identify and eliminate possible correlated features, reducing redundancy and improving the model's interpretability and performance."
+    "> The correlation analysis in a binary classification problems aid the understanding of the relationship between *predictor features* and the *target variable*. It helps identify which features are most influential in predicting the target class, allowing for feature selection or engineering. Additionally, correlation analysis helps identify and eliminate possible correlated features, reducing redundancy and improving the model's interpretability and performance."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +599,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> From the correlation matrix we can check that <span style=\"background-color:#d96c64\">\"CustomerId\"</span> is irrelevant to the Exited output. And that <span style=\"background-color:#77b072\">Age</span>, <span style=\"background-color:#77b072\">IsActiveMember</span> and <span style=\"background-color:#77b072\">Balance</span> are the most correlated features with the target <span style=\"background-color:lighgray\">Exited</span>. "
+    "> From the correlation matrix we can check that `CustomerId` is <span style=\"background-color:#e675a7\"> irrelevant</span> to the Exited output. And that `Age`, `IsActiveMember` and `Balance` are the <span style=\"background-color:#e675a7\">most correlated features </span> with the target `Exited`. "
    ]
   },
   {
@@ -608,7 +609,7 @@
    "source": [
     "### 3.2 Analysis of each feature\n",
     "\n",
-    "> Understand each feature of the dataset and its relation with the target variable."
+    "> Understand each feature of the dataset and its relation with the target variable and with other features."
    ]
   },
   {
@@ -621,16 +622,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f038d10dc60>"
+       "<matplotlib.legend.Legend at 0x7fcb05dac910>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -668,7 +669,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> From this analisys it is possible to identify that <span style=\"background-color:#77b072\">customers that **Exited** the bank are **older**.</span>"
+    "> From this analisys it is possible to identify that <span style=\"background-color:#e675a7\">customers that **Exited** the bank are **older**.</span>"
    ]
   },
   {
@@ -681,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +715,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> From the churn rate we can verify that <span style=\"background-color:#77b072\">Active Members are less likely to leave the bank.</span>"
+    "> From the churn rate we can verify that <span style=\"background-color:#e675a7\">Active Members are less likely to leave the bank.</span>"
    ]
   },
   {
@@ -722,12 +723,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Balance"
+    "#### Balance\n",
+    "\n",
+    "Customer balance in the bank account."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -761,16 +764,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> The \"Balance\" feature itself may not directly indicate churn.\n",
-    "\n",
-    "<span style='color:white; background-color:#35193e'>Consideration for feature engineering:</span>\n",
-    "\n",
-    "It can be used in combination with other features to create more informative predictors. For example, you can create new features such as \"Balance-to-Estimated salary Ratio\" or other features to capture additional aspects of customers' financial behavior, which might be indicative of their likelihood to Exit the bank."
+    "> The `Balance` feature itself may not directly indicate churn."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Let's visualize the Balance by Geography**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -796,12 +803,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "> The median of balance varies significantly by Geography. Germany is ~130k, while France and Spain is ~60k"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span style='color:white; background-color:#35193e'>Consideration for feature engineering:</span>\n",
+    "\n",
+    "It can be used in combination with other features to create more informative predictors. For example, you can create new features such as `Balance_EstimatedSalary_Ratio`, `Balance_GeographyMean_Ratio` or other features to capture additional aspects of customers' financial behavior, which might be indicative of their likelihood to Exit the bank."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Number of Products"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +864,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> From the information above, we can check the probability distribution of the number of products for customers that Exited and Not Exited the bank.\n",
+    "> From the information above, we can check the probability distribution of the number of products for customers that **Exited** and **Not Exited** the bank.\n",
     "\n",
     "**Highlights**: \n",
     " - Most customers that Exited the bank had 1 product.\n",
@@ -861,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -902,7 +927,7 @@
     "> The chart above represents the distribuition of credit score for customers that Exited and Not Exited the bank.\n",
     "\n",
     "The conclusions are not straightfoward, but **it could be infered** that:\n",
-    "- Customers that Exited the Bank tend to have a lower Credit Score than customers that Not Exited the bank.\n",
+    "- Customers that **Exited** the Bank tend to have a  <span style=\"background-color:#e675a7\">lower Credit Score</span> than customers that **Not Exited** the bank.\n",
     "\n",
     "<span style='color:white; background-color:#35193e'>Consideration for feature engineering:</span>\n",
     "\n",
@@ -915,12 +940,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Tenure"
+    "#### Tenure\n",
+    "Tenure refers to the duration or length of time a customer has been associated with a company or service."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -958,7 +984,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> The chart above represents the feature \"Tenure\" which refers to the length of time a customer has been associated with a company or service. \n",
+    "> The chart above represents the feature `Tenure`` which refers to the length of time a customer has been associated with a company or service. \n",
     "\n",
     "**Highlights**\n",
     "- It should be expected from domain knowledge that this feature could provide relevant information about the probability of a customer to have Exited the bank, but this _**cannot be infered from the results of the chart above**_ and from the correlation matrix.\n",
@@ -986,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1028,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1075,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1117,7 +1143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> From the chart above we see that <span style=\"background-color:#77b072\">there is a potential in combining Age and Tenure</span> as a new feature."
+    "> From the chart above we see that <span style=\"background-color:#e675a7\">there is a potential in combining Age and Tenure</span> as a new feature. "
    ]
   },
   {
@@ -1130,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1188,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> From the chart above we can see that the Estimated Salary alone don't provide much information for the churn prediction.\n",
+    "> From the chart above we can see that the `EstimatedSalary` alone don't provide much information for the churn prediction.\n",
     "\n",
     "<span style='color:white; background-color:#35193e'>Consideration for feature engineering:</span>\n",
     "- Scailing or binning the varible.\n"
@@ -1178,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1216,8 +1242,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Estimated Salary by Geography"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1255,12 +1289,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Has a Credit Card"
+    "#### Has a Credit Card"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1297,7 +1331,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**HasCrCard, IsActiveMember and Exited**"
+    "> No straighfoward relation found with churn rate."
    ]
   },
   {
@@ -1305,12 +1339,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> No relevant relation found"
+    "##### HasCrCard, IsActiveMember and Exited"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1357,9 +1391,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> From the above chart it can be seen that the Balance varies significantly by Geography.\n",
-    "\n",
-    "The feature \"Geography\" seems to bring relevant information for the prediction.\n",
+    "> No direct conclusion from this chart."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Geography"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The feature `Geography` seems to bring relevant information for the prediction.\n",
     "\n",
     "<span style='color:white; background-color:#35193e'>Consideration for feature engineering:</span>\n",
     "- One-hot encoding: categorical feature."
@@ -1391,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1452,7 +1500,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For this specific problem, I will just **compare the distribution of the features in the train and test dataset**. As we are considering static data, this is not a big issue, but it should be considered for real-world application of machine learning models in production."
+    "For this specific problem, I will just **compare the distribution of the features in the train and test dataset**."
    ]
   },
   {
@@ -1460,12 +1508,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> <span style=\"background-color:#77b072\">There are similar distributions for the features in each dataset.</span>"
+    "> <span style=\"background-color:#e675a7\">There are similar distributions for the features in each dataset.</span>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1603,7 +1651,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style=\"text-align: right;\"><em>Author: Laiza Milena Scheid Parizotto</em></p>\n"
+    "<p style=\"text-align: right;\"><em>Author: Laiza Milena Scheid Parizotto</em></p>"
    ]
   }
  ],
