modified:   churn-prediction/docs/model_control.csv 	modified:   churn-prediction/notebooks/EDA.ipynb 	modified:   churn-prediction/notebooks/feature_engineering.ipynb 	modified:   churn-prediction/notebooks/model_training.ipynb

--- a/churn-prediction/notebooks/EDA.ipynb
+++ b/churn-prediction/notebooks/EDA.ipynb
@@ -1651,7 +1651,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style=\"text-align: right;\"><em>Author: Laiza Milena Scheid Parizotto</em></p>"
+    "<p style=\"text-align: right;\"><em>Author: Laiza Milena Scheid Parizotto</em></p>\n",
+    "<p style=\"text-align: right;\"><em>Date: June 20th, 2023</em></p>"
    ]
   }
  ],
