--- a/churn-prediction/notebooks/feature_engineering.ipynb
+++ b/churn-prediction/notebooks/feature_engineering.ipynb
@@ -797,9 +797,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_Author: Laiza Milena Scheid Parizotto_\n",
-    "\n",
-    "_Date: June 19th, 2023_"
+    "<p style=\"text-align: right;\"><em>Author: Laiza Milena Scheid Parizotto</em></p>\n",
+    "<p style=\"text-align: right;\"><em>Date: June 20th, 2023</em></p>"
    ]
   }
  ],
